[package]
name = "forwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.77"
clap = { version = "4.3.23", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.20"
simple_logger = "4.2.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "net", "sync", "process", "time"] }
etherparse = "0.13.0"
socket2 = "0.5.5"
rand = "0.8.5"
assert_cmd = "2.0.13"
