[package]
name = "forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.4.18", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.20"
simple_logger = "4.2.0"
etherparse = "0.13.0"
socket2 = "0.5.5"
mio = { version = "1.0.2", features = ["net", "os-ext", "os-poll"] }
enum_dispatch = "0.3.13"
parking_lot = "0.12.3"

[build-dependencies]
vergen = { version = "8.2.8", features = ["git", "gitcl"] }
anyhow = "1.0.71"

[profile.release]
panic = "abort"
