[package]
name = "forwarder-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
simple_logger = "4.2.0"
forwarder = { path = "../forwarder" }

[build-dependencies]
vergen = { version = "8.2.8", features = ["git", "gitcl"] }
anyhow = "1.0.71"
